--- a/style.css
+++ b/style.css
@@ -97,3 +97,19 @@ body{
             font-size: 1.5rem ;
         }
 }
+
+.not-load{
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    color: #38a1f3;
+}
+.not-load a {
+    text-decoration: none;
+    color: deeppink;
+}
+.not-load a:hover {
+    color: red ;
+    text-decoration: underline;
+}
+
